Revision history for Perl extension Plack-Middleware-DebugLogging

{{$NEXT}}

0.001002  2014-03-24 10:37:27-04:00 EST5EDT

0.001001  2014-03-21 19:37:54-04:00 EST5EDT
    - was using msg instead of message in psgix.logger input erroneously.

0.001000  2014-03-21 18:54:49-04:00 EST5EDT
    - initial release.