@@ -2,7 +2,7 @@ name = Plack-Middleware-DebugLogging
 author = Matthew Phillips <mattp@cpan.org>
 license = Perl_5
 copyright_holder = Matthew Phillips <mattp@cpan.org>
-version = 0.001002
+version = 0.001003
 
 [@Basic]
 
